test/pt/up/fe/comp/cp2/semanticanalysis/additionalTests/thisInMain.jmm
class Test {
    static void main(String[] args) {
        this.foo(); // error: can't use 'this' in static context
    }

    void foo() {}
}
